# set-you-free

./: .coveragerc  .gitignore  .gitmodules  Procfile  README.md  app.py  pyproject.toml  setup.sh
.github/workflows/: test.yml
findpaper/models/: paper.py  publication.py
findpapers/: __init__.py  cli.py
findpapers/data/: available_databases.py  predatory_data.py  subject_area_by_key.py
findpapers/models/: paper.py  publication.py  search.py
findpapers/searchers/: acm_searcher.py  arxiv_searcher.py  biorxiv_searcher.py  cross_ref_searcher.py  ieee_searcher.py  medrxiv_searcher.py  opencitations_searcher.py  pubmed_searcher.py  rxiv_searcher.py  scopus_searcher.py
findpapers/tools/: bibtex_generator_tool.py  downloader_tool.py  rayyan_tool.py  refiner_tool.py  refman_tool.py  search_runner_tool.py
findpapers/utils/: persistence_utils.py  publication_utils.py  requests_utils.py
set_you_free/backend/findpapers/: __init__.py  exceptions.py
set_you_free/backend/findpapers/data/: user_agents.py
set_you_free/backend/findpapers/models/: paper.py  publication.py  search.py
set_you_free/backend/findpapers/searchers/: acm_searcher.py  arxiv_searcher.py  biorxiv_searcher.py  cross_ref_searcher.py  ieee_searcher.py  medrxiv_searcher.py  opencitations_searcher.py  pubmed_searcher.py  rxiv_searcher.py  scopus_searcher.py
set_you_free/backend/findpapers/tools/: bibtex_generator_tool.py  cross_references_tool.py  downloader_tool.py  rayyan_tool.py  refiner_tool.py  refman_tool.py  search_runner_tool.py
set_you_free/backend/findpapers/utils/: common_utils.py  persistence_utils.py  publication_utils.py  query_utils.py  requests_utils.py
set_you_free/backend/tests/: test_main.py
set_you_free/backend/tests/integration/: conftest.py  fixtures.py  value_fixtures.py
set_you_free/backend/tests/integration/factories/: paper_factory.py  publication_factory.py  search_factory.py
set_you_free/backend/tests/integration/models/: test_paper.py  test_publication.py  test_search.py
set_you_free/backend/tests/integration/searchers/: test_arxiv_searcher.py  test_cross_ref_searcher.py
set_you_free/backend/tests/integration/utils/: paper_utils.py  publication_utils.py  search_utils.py
set_you_free/backend/tests/unit/: test_common_utils.py  test_cross_ref_date_converter.py  test_query_utils.py
set_you_free/frontend/src/: home.py
set_you_free/frontend/src/pages/: 1_1️⃣_search.py  3_3️⃣_results.py
set_you_free/frontend/src/utils/: consts.py  search_engine.py  site_config.py
src/: home.py
src/pages/: 1_1️⃣_search.py  2_2️⃣_study_selection.py  3_3️⃣_results.py  3_3️⃣_viz.py  home.py  main.py  search.py
src/pages/md/: home.md
src/search/: __init__.py  search.py
src/tests/: test_search.py
src/utils/: consts.py  download.py  search_engine.py
tests/integration/: conftest.py  fixtures.py  test_paper.py  test_publication.py  test_search.py
tests/integration/factories/: paper_factory.py  publication_factory.py  search_factory.py
tests/integration/models/: test_paper.py  test_publication.py  test_search.py
tests/integration/searchers/: test_arxiv_searcher.py  test_cross_ref_searcher.py
tests/integration/utils/: paper_utils.py  publication_utils.py  search_utils.py
tests/unit/: test_common_utils.py  test_cross_ref_date_converter.py  test_query_utils.py
