[tool.poetry]
name = "set-you-free"
version = "0.1.0"
description = "Structured Literature Search "
authors = ["Christia Gerloff <christian.gerloff@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
streamlit = "^1.11.0"
findpapers = {git = "https://github.com/ChristianGerloff/findpapers.git", branch = "develop"}
graphviz = "^0.20.1"
matplotlib-venn = "^0.11.7"
streamlit-aggrid = "^0.3.0"
rispy = "^0.7.1"
stqdm = "^0.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.260"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
