[tool.poetry]
name = "set-you-free"
version = "0.1.0"
description = "Structured Literature Search "
authors = ["Christia Gerloff <christian.gerloff@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
streamlit = "^1.11.0"
graphviz = "^0.20.1"
matplotlib-venn = "^0.11.7"
streamlit-aggrid = "^0.3.0"
rispy = "^0.7.1"
stqdm = "^0.0.4"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.261"
flake8 = "^6.0.0"
black = "^23.3.0"
polyfactory = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
